--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,31 +2,92 @@
             <!--  loop through stellarEvents and create list time.
             The list item has buttons for view, save, ical
             -->
-            <div>start</div>
-            {{#each blogPosts as |blogPost|}}
+<div>start</div>
+<!-- blogPost cards -->
+<div>
+{{#each blogPosts as |blogPost|}}
 
-<!-- post cards -->
-<div class="blogs">
-  <section class="card">
-    <header>
-      <span id:"title">
-      {{blogPost.title}}
-      </span>
-      <span id:"timestamp">
-        Posted by {{blogPost.user}} on {{blogPost.createdAt}}
-      </span>
-    </header>
-
-    <p id:"content">
+<div class="clsBlogCard">
+  <header>
+    <span id:"blogCardTitle">
+    {{blogPost.title}}
+    </span>
+    <span id:"blogCardTimestamp">
+    Posted by {{blogPost.user}} on {{blogPost.createdAt}}
+    </span>
+  </header>
+    <p id:"blogContent">
     {{blogPost.content}}
     </p>
-  </section>
+</div>
+<div class="clsBlogCard">
+  <header>
+    <span id:"blogCardTitle">
+    Comment
+    </span>
+  </header>
+    <p id:"blogContent">
+    {{blogPost.content}}
+    </p>
+</div>
+{{/each}}
+
+<!-- comment cards -->
+<div class="clsCommentCard">
+  <header>
+    <span id:"title">
+    </span>
+    <span id:"timestamp">
+    </span>
+  </header>
+  <div>
+    <label class="clsCommentLabel" for="inputComment">Comment</label>
+    <textarea name="inputComent" id="inputComment" rows="5" cols="15"></textarea>
+    <button class="clsCommentButton">Submit</button>
+  </div>
+</div>
+</div>
+
+<!-- New Post cards -->
+<div class="clsNewPostCard">
+  <header>
+    <span id:"title">
+      Create New Post
+    </span>
+    <span id:"timestamp">
+    </span>
+  </header>
+    <div>
+    <label class="clsPostLabel" for="inputNewPostTitle">Title</label>
+    <textarea class="clsPostInput" id="imputNewPostTitle" name="inputNewPostTitle" rows="1" cols="15"></textarea>
+    <label class="clsPostLabel" for="inputNewPostContent">Content</label>
+    <textarea class="clsPostInput" id="inputNewPostContent" name="inputNewPostContent" rows="5" cols="15"></textarea>
+    <button class="clsPostButton" id"createButton>Create</button>
+  </div>
+</div>
+
+<!-- edit post cards -->
+<div class="clsEditPostCard">
+  <header>
+    <span id:"title">
+      Create New Post
+    </span>
+    <span id:"timestamp">
+    </span>
+  </header>
+    <div>
+    <label class="clsPostLabel" for="inputEditPostTitle">Title</label>
+    <textarea class="clsPostInput" id="imputEditPostTitle" name="inputEditPostTitle" rows="1" cols="15"></textarea>
+    <label class="clsPostLabel" for="inputEditPostContent">Content</label>
+    <textarea class="clsPostInput" id="inputEditPostContent" name="inputEditPostContent" rows="5" cols="15"></textarea>
+    <button class="clsPostButton" id"editButton>Edit</button>
+    <button class="clsPostButton" id"deleteButton>Delete</button>
+  </div>
 </div>
 
 
-            {{/each}}
-            <div>end</div>
-
+<button class="clsNewPostButton" id="newPostButton">+ New Post</button>
+</div>
 
 <!-- Included Scripts 
 <script src="./assets/js/eventpage.js"></script>
