--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,45 +20,24 @@
   <script src="https://kit.fontawesome.com/af95bfed77.js" crossorigin="anonymous"></script>
   <!-- ******must be last**** -->
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/eventpage.css">
 
 </head>
 
 <body>
-  <header>
-<nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link " href="#">Home</a>
-        <a class="nav-link " href="#">Dashboard</a>
-        <a class="nav-link ">login</a>
-        <a class="nav-link ">logout</a>
-      </div>
+  <header class="sticky-top ">
+    <nav class="navbar navbar-default  ">  
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="#">Home</a>
+      <a class="nav-item nav-link" href="#">Dashboard</a>
+      <a class="nav-item nav-link" href="#">Login</a>
+      <a class="nav-item nav-link" href="#">Loout</a>
     </div>
-  </div>
-  </nav>
-<div id="blogLogo">The Tech Blog</div>
-
-
+</nav>
+    <div id="blogLogo">The Tech Blog</div>
   </header>
-
-  <div class="row">
-    <main class="col-sm-12 ">
-      <div class="">
-        {{{ body }}}
-      </div>
-    </main>
-  </div>
-  <footer class="navbar fixed-bottom" style="background-color: #1b1b1b;">
-  <div class="container d-flex justify-content-center align-items-center">
-    <h3 class="Orbitron footerText" style="color: #fff;">Copyright info</h3>
-    <h3 class="Orbitron footerText" style="color: #fff;">Event data provided by NASA</h3>
-</footer>
-
+  <main>
+  {{{body}}}
+  </main>
   <!-- Include Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -68,6 +47,8 @@
 
   <!-- Added link to the jQuery library -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-</body>
+  
+
+  </body>
 
 </html>
