--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,6 +49,8 @@ body {
     margin-right: 0px;
     margin-left: 0px;
     padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 
     }
     
@@ -101,14 +103,13 @@ body {
   Blog Card 
   *************************/
   .clsBlogCard {
-    background-color:red;
-    /* :rgb(218 ,233, 211); */
-    border: 2px solid black;
+    background-color:rgb(218 ,233, 211); 
+    border: 4px solid black;
     width:100%;
     margin:10px;
-    padding:0px;
   }
-  .clsBlogCard.header {
+
+  .clsCardHeader {
     display:flex;
     align-items:center;
     justify-content: space-between;
@@ -116,21 +117,26 @@ body {
     background-color: black;
     font-size:large;
     width:100%;
-  }
-
-  #blogCardTitle,
-  #blogCardTimestamp{
-    position:relative;
     padding:5px;
   }
-
-  #blogContent {
-    padding: 4px;
-    background-color:rgb(218 ,233, 211);
-    width:100%;
-        padding:5px;
+    .clsCardContent {
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      color:black;
+      background-color: rgb(218 ,233, 211);
+      font-size:medium;
+      width:100%;
+      padding:5px;
   }
 
+  .clsBlogCardData
+  {   position:relative;
+
+  }
+  #timestamp {
+    position: relative;
+  };
 
 /************************ 
   comment Card 
@@ -196,6 +202,3 @@ body {
 
 
 
-  #timestamp {
-    position: relative;
-  }
