--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -26,8 +26,8 @@
     Comment
     </span>
   </header>
-    <p id:"blogCommentContent">
-    {{blogComments}}
+    <p id:"blogCommentsContent">
+    {{blogPost.BlogComments[0].comment}}
     </p>
 </div>
 {{/each}}
