before tutor with correct findall

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -27,7 +27,7 @@
     </span>
   </header>
     <p id:"blogCommentsContent">
-    {{blogPost.BlogComments[0].comment}}
+    {{"show comment here"}}
     </p>
 </div>
 {{/each}}
