Finished post and comment routes

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,7 +13,7 @@
     {{blogPost.title}}
     </span>
     <span id:"blogCardTimestamp">
-    Posted by {{blogPost.user}} on {{blogPost.createdAt}}
+    Posted by {{blogPost.user}} on {{formatDate blogPost.createdAt}}
     </span>
   </header>
     <p id:"blogContent" class="clsCardContent">
