--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,16 +73,19 @@ body {
   .nav-link {
   text-decoration:none;
   color:rgb(218 ,233, 211);
+  padding-right: 10px;
   }
   
   .nav-link:hover {
   background-color:rgb(218 ,233, 211);
   color:black;
   }
+    
   .navbar-nav {
     flex-direction: row;
-    justify-content: space-evenly;
-   /* width: 50%;*/
+    
+ /*   justify-content: space-evenly;
+  width: 50%;*/
   }
   
   /**************************************
@@ -166,7 +169,7 @@ body {
     justify-content: space-between;
     color:rgb(218 ,233, 211);
     background-color: black;
-    font-size:large;
+    font-size:medium;
     /*width:100%;*/
         padding:5px;
   }
@@ -177,6 +180,7 @@ body {
   .clsCreateButton,
   .clsPostInput,
   .clsPostButton,
+  clsNewPostButton,
   .clsPostLabel {
     position: relative;
     margin:0px;
@@ -202,7 +206,10 @@ body {
     .clsNewPostButton  {
     color:white;
     background-color: black;
+    
     position:relative;
+    top:50%;
+    
   }
   .clsNewPostButton:hover{
     background-color: grey;
