--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,36 +1,72 @@
 <div class="container-fluid">
-            <!--  loop through stellarEvents and create list time.
-            The list item has buttons for view, save, ical
-            -->
-            <div>Dashboard start</div>
-            {{#each blogPosts as |blogPost|}}
 
-<!-- post cards -->
-<div class="blogs">
-  <section class="card">
-    <header>
-      <span id:"title">
-      {{blogPost.title}}
-      </span>
-      <span id:"timestamp">
-        Posted by {{blogPost.user}} on {{blogPost.createdAt}}
-      </span>
-    </header>
+<!-- blogPost cards -->
+<div>
+{{#each blogPosts as |blogPost|}}
 
-    <p id:"content">
+<div class="clsBlogCard" id="blogCard">
+  <header class="clsCardHeader" id="{{blogPost.id}}">
+    <span id:"blogCardTitle" ">
+    {{blogPost.title}}
+    </span>
+    <span id:"blogCardTimestamp">
+    Posted by {{blogPost.user}} on {{formatDate blogPost.createdAt}}
+    </span>
+  </header>
+    <p id:"blogContent" class="clsCardContent">
     {{blogPost.content}}
+   
     </p>
-  </section>
+</div>
+
+<!-- edit post cards -->
+<div id="editPost{{blogPost.id}}" class="clsBlogCard clsCardHidden">
+  <header>
+    <span id:"title">
+      Edit or Delete Post
+    </span>
+    <span id:"timestamp">
+    </span>
+  </header>
+    <p>
+    <label class="clsPostLabel"   for="inputEditPostTitle">Title</label>
+    <textarea class="clsPostInput" id="inputEditPostTitle" rows="1" cols="15">{{blogPost.title}}</textarea>
+    <label class="clsPostLabel"   for="inputEditPostContent">Content</label>
+    <textarea class="clsPostInput" id="inputEditPostContent" rows="5" cols="15">{{blogPost.content}}</textarea>
+    <button class="clsPostButton" value="{{blogPost.id}}" id="editPostButton">Edit</button>
+    <button class="clsPostButton" value="{{blogPost.id}}" id="deletePostButton">Delete</button>
+    </p>
+</div>
+
+{{/each}}
+ <button class="clsNewPostButton" id="newPostButton">+ New Post</button>
+
 </div>
 
 
-            {{/each}}
-            <div>end</div>
+<!-- New Post cards -->
+<div class="clsBlogCard clsCardHidden" id="newPostCard">
+  <header>
+    <span id:"title">
+      Create New Post
+    </span>
+    <span id:"timestamp">
+    </span>
+  </header>
+    <p>
+    <label class="clsPostLabel" for="inputNewPostTitle">Title</label>
+    <textarea class="clsPostInput" id="inputNewPostTitle" rows="1" cols="15"></textarea>
+    <label class="clsPostLabel" for="inputNewPostContent">Content</label>
+    <textarea class="clsPostInput" id="inputNewPostContent" rows="5" cols="15"></textarea>
+    <button class="clsPostButton" id="createPostButton">Create</button>
+  </p>
+</div>
+</div>
 
+<!-- Included Scripts -->
+ <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="./assets/js/dashboard.js"></script>
 
-<!-- Included Scripts 
-<script src="./assets/js/eventpage.js"></script>
--->
 <script>
   var currentUserId = "{{currentUserId}}"; // Assign the currentUserId from the session
 </script>
