--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -96,6 +96,8 @@
 </div>
 
 <!-- Included Scripts -->
+ <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+ 
 <script src="./assets/js/home.js"></script>
 
 <script>
