--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,10 +27,10 @@
   <header class="sticky-top ">
     <nav class="navbar navbar-default  ">  
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">Home</a>
-      <a class="nav-item nav-link" href="#">Dashboard</a>
-      <a class="nav-item nav-link" href="#">Login</a>
-      <a class="nav-item nav-link" href="#">Loout</a>
+      <a class="nav-item nav-link" href="/">Home</a>
+      <a class="nav-item nav-link" href="/dashboard">Dashboard</a>
+      <a class="nav-item nav-link" href="login">Login</a>
+      <a class="nav-item nav-link" href="logout">Loout</a>
     </div>
 </nav>
     <div id="blogLogo">The Tech Blog</div>
