cleaned up files

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,7 +23,7 @@
 <div id="editPost{{blogPost.id}}" class="clsBlogCard clsCardHidden">
   <header>
     <span id:"title">
-      Edit or Delete Post
+      Update or Delete Post
     </span>
     <span id:"timestamp">
     </span>
@@ -33,7 +33,7 @@
     <textarea class="clsPostInput" id="inputEditPostTitle" rows="1" cols="15">{{blogPost.title}}</textarea>
     <label class="clsPostLabel"   for="inputEditPostContent">Content</label>
     <textarea class="clsPostInput" id="inputEditPostContent" rows="5" cols="15">{{blogPost.content}}</textarea>
-    <button class="clsPostButton" value="{{blogPost.id}}" id="editPostButton">Edit</button>
+    <button class="clsPostButton" value="{{blogPost.id}}" id="editPostButton">Update Post</button>
     <button class="clsPostButton" value="{{blogPost.id}}" id="deletePostButton">Delete</button>
     </p>
 </div>
