added logon and create user. fixed up blog

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -68,6 +68,6 @@
 <script src="./assets/js/dashboard.js"></script>
 
 <script>
-  var currentUserId = "{{currentUserId}}"; // Assign the currentUserId from the session
+  var currentUserName = "{{currentUserName}}"; // Assign the currentUserName from the session
 </script>
 
