--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-            <!--  loop through stellarEvents and create list time.
+            <!--  loop through blogposts and create list time.
             The list item has buttons for view, save, ical
             -->
 <!-- blogPost cards -->
@@ -101,6 +101,6 @@
 <script src="./assets/js/home.js"></script>
 
 <script>
-  var currentUserId = "{{currentUserId}}"; // Assign the currentUserId from the session
+  var currentUserName = "{{currentUserName}}"; // Assign the currentUserName from the session
 </script>
 
