--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-            <!--  loop through stellarEvents and create list time.
+            <!--  loop through blogposts and create list time.
             The list item has buttons for view, save, ical
             -->
             <div>Comments start</div>
@@ -90,9 +90,9 @@
 </div>
 
 <!-- Included Scripts 
-<script src="./assets/js/eventpage.js"></script>
+
 -->
 <script>
-  var currentUserId = "{{currentUserId}}"; // Assign the currentUserId from the session
+  var currentUserName = "{{currentUserName}}"; // Assign the currentUserName from the session
 </script>
 
