--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,6 @@
+{{#if loggedIn}}
 <div class="container-fluid">
+
 
 <!-- blogPost cards -->
 <div>
@@ -39,8 +41,9 @@
 </div>
 
 {{/each}}
+<div>
  <button class="clsNewPostButton" id="newPostButton">+ New Post</button>
-
+</div>
 </div>
 
 
@@ -62,6 +65,11 @@
   </p>
 </div>
 </div>
+{{else}}
+<div>
+<a href="/login">You must login first to view the blogs</a>
+</div>
+{{/if}}
 
 <!-- Included Scripts -->
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
